WEBPACK js only

--- a/dwr/core/templates/core/index.html
+++ b/dwr/core/templates/core/index.html
@@ -55,6 +55,6 @@
 
 <div class="container">
     <h1>{{ title }}</h1>
-    <p>Simple app</p>
+    <p id="message">Simple app</p>
 </div>
 {% endblock %}
