--- a/dwr/core/templates/core/about.html
+++ b/dwr/core/templates/core/about.html
@@ -7,6 +7,11 @@
     <p id="message">About us</p>
 <i class="bi bi-moon-stars-fill"></i>
 <button hx-get="{% url 'about' %}" hx-trigger="click" hx-swap="outerHTML">Click me</button>
+  {% for num in '123' %}
+    {{ num }}
+<br>
+  {% endfor %}
+
 
 
 {% endblock %}
