--- a/dwr/core/templates/core/index.html
+++ b/dwr/core/templates/core/index.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -39,7 +39,6 @@
 
 
 <div class="container">
-
     <!--    <h1>{{ title }}</h1>-->
     <!--    <p id="message">Simple app</p>-->
 
