--- a/dwr/core/templates/base.html
+++ b/dwr/core/templates/base.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-
     <link href="{% static 'bundle.css' %}" rel="stylesheet">
-
 </head>
 
 <body>
@@ -86,22 +84,34 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                    {% for m in menu %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if m.name == title %}active{% endif %}" aria-current="page"
+                               href="{% url m.url %}">{{ m.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if m.name == title %}active{% endif %}" aria-current="page"
+                               href="{% url 'login' %}">Login</a>
+                        <li class="nav-item">
+                        </li>
+                        <a class="nav-link {% if m.name == title %}active{% endif %}" aria-current="page"
+                           href="{% url 'register' %}">Register</a>
+                    {% endif %}
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-
             </div>
         </div>
     </nav>
